--- a/examples/angular-cli/src/app/app.component.html
+++ b/examples/angular-cli/src/app/app.component.html
@@ -1,20 +1,10 @@
-  <main>
-    <div class="row">
-      <div class="col-md-offset-3 col-md-6">
-        <h4>Simple datepicker</h4>
-        <div class="form-group">
-          <div class="input-group">
-            <input class="form-control" 
-                  a2e-datetimepicker
-                  [date]="dateTo"
-                  [options]="a2eOptions"
-                  (onChange)="dateToChange($event)"/>
-            <span class="input-group-addon">
-              <span class="glyphicon glyphicon-calendar"></span>
-            </span>
-          </div>
-          selected date: {{dateModel}}
-        </div>
-      </div>
-    </div>
+  <main class="container">
+    <h1>ng2-eonasdan-datetimepicker examples</h1>
+    <app-simple-datepicker></app-simple-datepicker>
+    <hr/>
+    <app-linked-datepickers></app-linked-datepickers>
+    <hr/>
+    <app-reactive-form></app-reactive-form>
+    <hr/>
+    <app-advanced-datepicker></app-advanced-datepicker>
   </main>
