--- a/demo/src/app/simple-datepicker/simple-datepicker.component.html
+++ b/demo/src/app/simple-datepicker/simple-datepicker.component.html
@@ -1,19 +1,46 @@
 <div class="row">
-  <div class="col-md-offset-3 col-md-6">
-    <h4>Simple datepicker</h4>
-    <div class="form-group">
-      <div class="input-group">
-        <input class="form-control" 
+    <div class="col-md-12">
+      <h4>Single datepicker</h4>
+    </div>
+    <div class="col-md-3 col-md-offset-3">
+        <label>Input element:</label>
+        <div class="form-group">
+            <div class="input-group">
+                <input class="form-control" 
+                      a2e-datetimepicker
+                      [(ngModel)]="dateModel"
+                      [options]="options"
+                      />
+                <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <label>Input-group div element:</label>
+        <div class="form-group">
+            <div class="input-group"
               a2e-datetimepicker
               [(ngModel)]="dateModel"
-              [options]="options"
-              />
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-calendar"></span>
-        </span>
-      </div>
+              [options]="options">
+                <input class="form-control"/>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+            </div>
+        </div>
+    </div>
+  <div class="col-md-offset-3 col-md-6">
+    <div class="form-group">
+      <strong>Input date: </strong> {{dateModel ? (dateModel.format() | date: 'yyyy/MM/dd HH:mm') : 'N/A'}}
       <br>
-      <strong>Input date: </strong> {{dateModel}}
+
+
+      <button class="btn btn-default" (click)="getTime()" [disabled]="!dateModel">What's the time?</button>
+      <button class="btn btn-default" (click)="addTime(1, 'h')" [disabled]="!dateModel">Add +1h</button>
+      <button class="btn btn-default" (click)="addTime(1, 'd')" [disabled]="!dateModel">Add +1d</button>
+      <button class="btn btn-default" (click)="addTime(1, 'w')" [disabled]="!dateModel">Add +1w</button>
+      <button class="btn btn-default" (click)="clearTime()" [disabled]="!dateModel">Clear the time</button>
     </div>
   </div>
 </div>
