--- a/demo/src/app/reactive-form/reactive-form.component.html
+++ b/demo/src/app/reactive-form/reactive-form.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
-    <h4>With reactive form</h4>
+    <h4>Reactive forms: with validators</h4>
     <form [formGroup]="form">
       <div class="col-md-6">
         <div class="form-group">
-          <div class="input-group">
+          <div class="input-group" [ngClass]="{'has-error': form.get('start').errors}">
             <input class="form-control" 
                   a2e-datetimepicker
                   formControlName="start"
@@ -17,7 +17,7 @@
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <div class="input-group">
+          <div class="input-group" [ngClass]="{'has-error': form.get('end').errors}">
             <input class="form-control" 
                   a2e-datetimepicker
                   formControlName="end"
@@ -32,6 +32,10 @@
       <strong>Form is valid:</strong> {{form.valid}}
       <br>
       <strong>Form values:</strong> {{form.value | json}}
+      <br>
+      
+      <button class="btn btn-default" (click)="startReset()">Clear start date</button>
+      <button class="btn btn-default" (click)="endReset()">Clear end date</button>
     </form>
   </div>
 </div>
