fix(directive): set input untouched when resetting the form
- set input untouched when resetting the form
- add test for touched & untouched

Closes #49

--- a/demo/src/app/reactive-form/reactive-form.component.html
+++ b/demo/src/app/reactive-form/reactive-form.component.html
@@ -33,6 +33,8 @@
       <br>
       <strong>Form values:</strong> {{form.value | json}}
       <br>
+      <strong>start date is touched? </strong> {{form.get('start').touched}}
+      <br>
       
       <button class="btn btn-default" (click)="startReset()">Clear start date</button>
       <button class="btn btn-default" (click)="endReset()">Clear end date</button>
